--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap");
+
 .App {
+  color: black;
+  font-family: "Montserrat", sans-serif;
+  border-radius: 30px;
+}
+
+.search {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input {
+  width: 600px;
+  font-family: "Montserrat", sans-serif;
+  padding: 15px;
+  margin: 15px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.coins {
+  text-align: center;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-wrap: wrap;
+  padding: 10px 40px;
+}
+
+.card {
+  background-color: #6f2232;
   color: white;
+  border: 2px black solid;
+  width: 240px;
+  padding: 10px;
+  margin: 10px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+img {
+  width: 40px;
 }
